# api-starter

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yaml
axum-template/: Cargo.toml  Dockerfile  Makefile  README.md
axum-template/config/: default.toml  production.toml
axum-template/src/: config.rs  models.rs  state.rs
axum-template/src/middleware/: tracing.rs
axum-template/src/routes/: items.rs  mod.rs
axum-template/tests/: items_api.rs
config/: default.toml
src/: errors.rs  main.rs
src/routes/: health.rs
